--- a/client/styles.css
+++ b/client/styles.css
@@ -66,4 +66,59 @@ body, h1, h2, h3, ul, li, p {
     background-color: #0055A4;
     color: #ffffff;
   }
+
+
+ /* contact form styling */
+.contact-form {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 40px; 
+}
+
+.contact-form h2 {
+  margin-bottom: 20px;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"] {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.contact-form textarea {
+  width: 50%; /* Set textarea width to 50% */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+  margin-bottom: 15px;
+}
+
+.contact-form button {
+  display: block; /* Button on a new line */
+  padding: 10px 20px;
+  background-color: #FF9900;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: auto;
+}
+
+.contact-form button:hover {
+  background-color: #FFCC33;
+}
+
   
