--- a/client/styles.css
+++ b/client/styles.css
@@ -97,7 +97,7 @@ body, h1, h2, h3, ul, li, p {
 }
 
 .contact-form textarea {
-  width: 50%; /* Set textarea width to 50% */
+  width: 50%; 
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -106,7 +106,7 @@ body, h1, h2, h3, ul, li, p {
 }
 
 .contact-form button {
-  display: block; /* Button on a new line */
+  display: block; 
   padding: 10px 20px;
   background-color: #FF9900;
   color: #ffffff;
@@ -121,4 +121,24 @@ body, h1, h2, h3, ul, li, p {
   background-color: #FFCC33;
 }
 
+
+/* about us styling */
+
+
+.about-section {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 40px; 
+}
+
+.about-section h2 {
+  margin-bottom: 20px;
+}
+
+.about-section p {
+  margin-bottom: 15px;
+  line-height: 1.6;
+}
   
